--- a/css/style.css
+++ b/css/style.css
@@ -71,16 +71,17 @@ background-color: #555;
 	}
 	.navbar {
 		flex-direction: column;
-		height: 100px;
+		height: 180px;
 
 	}
 	.toggle-button{
-		height: 38px;
-		top:2rem;
+		height: 48px;
+		top:4rem;
+		right:5rem;
 	}
 	.toggle-button .bar{
-		height:5px;
-		width: 100%
+		height:8px;
+		width: 50px;
 	}
 	nav img{
 		height:100px;
